sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:12: error: 'while' expected but identifier found.
		i = 0;
                ^AlgCombSort:12: error: '(' expected but ';' found.
		i = 0;
                     ^AlgCombSort:20: error: ';' expected but 'while' found.
	} while (!sorted || ecart>=1)
          ^AlgCombSort:25: error: Unmatched closing brace '}' ignored here
}
^